part3/ex3.03/manifests/project-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-svc
  namespace: project-namespace
spec:
  type: NodePort
  selector:
    app: project 
  ports:
    - port: 2347
      protocol: TCP
      targetPort: 8080
