part3/ex3.03/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: project-ingress
  namespace: project-namespace
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: project-svc
          servicePort: 2347
      - path: /todos
        backend:
          serviceName: backend-svc
          servicePort: 2347
